DevOps-Project-18/kyverno/require-non-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-non-root
  annotations:
    policies.kyverno.io/title: Require Non-Root Containers
    policies.kyverno.io/category: Pod Security
    policies.kyverno.io/severity: medium
    policies.kyverno.io/description: >-
      Containers must not run as root.
spec:
  validationFailureAction: Enforce
  background: true

  rules:
    - name: check-run-as-non-root
      match:
        any:
          - resources:
              kinds:
                - Pod

      exclude:
        any:
          - resources:
              namespaces:
                - monitoring


      validate:
        message: "Containers must run as non-root."
        pattern:
          spec:
            containers:
              - securityContext:
                  runAsNonRoot: true
